--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section id="about">
   <h2>About Me</h2>
   <div class="about-content">
-    <div class="about-img"><img src="/Images/Profile.jpg.jpeg" width="300" alt="Profile Image "></div>
+    <div class="about-img"><img src="/Images/Profile.jpeg" width="300" alt="Profile Image "></div>
     <div class="about-text">
       <p>Hello! I'm a passionate MERN Stack Developer with expertise in building modern web applications. I love creating user-friendly interfaces and robust backend systems.</p>
       <p>I'm currently learning the MERN stack and working on exciting projects. My goal is to become a full-stack developer who can build complete web solutions.</p>
