--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="about-content">
 
     <div class="about-img">
-      <img src="images/shoaib.jpeg" width="300" alt="Profile Image ">
+      <img src="shoaib.jpeg" width="300" alt="Profile Image ">
     </div>
 
     <div class="about-text">
