--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
   <!---Hero Section--> 
   <section id="home" class="hero">
-    <h1>Hi, I`m Muhammad Shoaib</h1>
+    <h1>Hi, I'm Muhammad Shoaib</h1>
     <p>MERN Stack Developer | Building Amazing Web Application </p>
     <a href="#contact" class="btn">Get In Touch </a>
   </section> 
